# sql2sparql

./: .gitignore  AGENTS.md  CITATION.cff  LICENSE  README.md  SPARQL_ENDPOINT_SETUP.md  quick_demo.py  requirements.txt  setup.py
datasets/: northwind.ttl  northwind_queries.sql  northwind_schema.py  test_complex_aggregates.py  test_northwind.py  test_simple_groupby.py
fuseki-databases/Data-0001/: nodes-data.bdf  prefixes-data.bdf
sql2sparql/: __init__.py  pyproject.toml
sql2sparql/cli/: main.py
sql2sparql/converters/: group_having_converter.py  insert_delete_converter.py  select_converter.py  where_converter.py
sql2sparql/core/: converter.py  models.py  schema_mapper.py
sql2sparql/debug/: __init__.py  debug_calc_where.py  debug_from.py
sql2sparql/examples/: example_usage.py  quick_demo.py  sample_data.ttl  sample_queries.sql  sql2sparql_test_results.json  test_aggregate_join.py  test_enhanced_features.py  test_simple.py
sql2sparql/executors/: sparql_executor.py
sql2sparql/parsers/: sql_parser.py
sql2sparql/tests/: test_aggregates.py  test_calculated_columns.py  test_complex_where.py  test_converter.py  test_expression_builder.py  test_operators.py  test_union_queries.py
sql2sparql/utils/: __init__.py
